--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ yolk==0.4.1
 django-tagging==0.3.1
 django-extensions==0.5
 django-mptt-2==0.3.0
+django-reversion==1.3.1
+django-pagination=1.0.7
+-e git+http://github.com/jpwatts/django-positions.git/#egg=django-positions
