--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,7 @@ django-extensions==0.5
 django-mptt-2==0.3.0
 django-reversion==1.3.1
 django-pagination==1.0.7
+django-registration==0.7
+django-threadedcomments==0.5.2
+South==0.7.1
 -e git+http://github.com/jpwatts/django-positions.git/#egg=django-positions
