--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ django-reversion==1.3.1
 django-pagination==1.0.7
 django-registration==0.7
 django-threadedcomments==0.5.2
-South==0.7.1
+South==0.7.2
 -e git+http://github.com/jpwatts/django-positions.git/#egg=django-positions
 mysql-python==1.2.3c1
 PIL==1.1.7
+ipython==0.10
