move stuff into src/

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
-socket = django_recipes.sock
+socket = /home/david/public_html/recipes.davidgrant.ca/public/django_recipes.sock
 chdir = /home/david/public_html/recipes.davidgrant.ca/public/src
-pidfile = /tmp/django-recipes.pid
+pidfile = /home/david/public_html/recipes.davidgrant.ca/public/django-recipes.pid
 env = DJANGO_SETTINGS_MODULE=django_recipes.settings
 module = django_recipes.wsgi:application
 processes = 1
