changed location on server

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
-socket = /home/david/public_html/recipes.davidgrant.ca/public/django_recipes.sock
-chdir = /home/david/public_html/recipes.davidgrant.ca/public/src
-pidfile = /home/david/public_html/recipes.davidgrant.ca/public/django-recipes.pid
+socket = /home/david/public_html/django/django_recipes/public/django_recipes.sock
+chdir = /home/david/public_html/django/django_recipes/public/src
+pidfile = /home/david/public_html/django/django_recipes/public/django-recipes.pid
 env = DJANGO_SETTINGS_MODULE=django_recipes.settings
 module = django_recipes.wsgi:application
 processes = 1
@@ -9,7 +9,7 @@ threads = 1
 stats = 127.0.0.1:9192
 vacuum=True
 master=True
-home=/home/david/public_html/recipes.davidgrant.ca/public/env
+home=/home/david/public_html/django/django_recipes/public/env
 uid=1000
 gid=1000
 chmod-socket=666
