almost finished making it work on Django 1.6

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
-Django==1.4.1
+Django==1.6.1
 yolk==0.4.3
 django-tagging==0.3.1
 django-extensions==0.9
-django-mptt-2==0.3.0
+django-mptt==0.6.0
 django-reversion==1.6.2
 django-pagination==1.0.7
-django-registration==0.8
+django-registration==1.0
 django-threadedcomments==0.5.3
-South==0.7.6
+South==0.8.3
 django-positions==0.4.3
-mysql-python==1.2.3
+mysql-python==1.2.4
 PIL==1.1.7
 ipython==0.13
-uwsgi==1.9.11
+
+coverage==3.6
+django-discover-runner==1.0
+model_mommy==1.1
+django-debug-toolbar==0.11.0
+mock==1.0.1
+django-model-utils==1.5.0
+pip-tools==0.3.4
