--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,8 @@ Django==1.6.1
 yolk==0.4.3
 django-tagging==0.3.1
 django-extensions==0.9
-django-mptt==0.6.0
-django-reversion==1.6.2
 django-pagination==1.0.7
-django-registration==1.0
-django-threadedcomments==0.5.3
+#django-registration==1.0
 South==0.8.3
 django-positions==0.4.3
 mysql-python==1.2.4
