--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,21 @@
-Django==1.7
+Django==1.8.14
 yolk==0.4.3
-django-tagging==0.3.2
-django-extensions==1.3.7
+django-tagging==0.4.3
+django-extensions==1.7.2
 django-pagination==1.0.7
 #django-registration==1.0
 django-positions==0.5.3
 mysql-python==1.2.5
-Pillow==2.4.0
-ipython==2.1.0
+Pillow==3.3.1
+ipython==5.1.0
+django-autocomplete-light==3.1.8
 
-coverage==3.7.1
-model_mommy==1.2.1
-django-debug-toolbar==1.2.1
-mock==1.0.1
-django-model-utils==2.0.3
-pip-tools==0.3.4
+coverage==4.2
+model_mommy==1.2.6
+django-debug-toolbar==1.5
+mock==2.0.0
+django-model-utils==2.5.2
+pip-tools==1.7.0
 
-pint==0.4
-fabric==1.8.3
+pint==0.7.2
+fabric==1.12.0
