Added SECRET_KEY environment variable

--- a/django_recipes/settings/local.py.example
+++ b/django_recipes/settings/local.py.example
@@ -2,6 +2,8 @@ from .base import *
 
 DEBUG = True
 TEMPLATE_DEBUG = DEBUG
+#Get a key at e.g. http://randomkeygen.com
+SECRET_KEY = 'EnterSomeKindOfRandomlyGenratedSecretKeyHere'
 
 DATABASES = {
     'default': {
