--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ django-extensions==1.7.2
 django-pagination==1.0.7
 #django-registration==1.0
 django-positions==0.5.3
-mysql-python==1.2.5
+mysqlclient==1.3.10
 Pillow==3.3.1
 ipython==5.1.0
 django-autocomplete-light==3.1.8
