--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,19 @@
-Django==1.8.14
-yolk==0.4.3
-django-tagging==0.4.3
-django-extensions==1.7.2
-django-pagination==1.0.7
+Django==1.10.6
+django-tagging==0.4.5
+django-extensions==1.7.7
+#django-pagination==1.0.7
 #django-registration==1.0
-django-positions==0.5.3
+django-positions==0.5.4
 mysqlclient==1.3.10
-Pillow==3.3.1
-ipython==5.1.0
-django-autocomplete-light==3.1.8
+Pillow==4.0.0
+ipython==5.3.0
+django-autocomplete-light==3.2.1
 
-coverage==4.2
-model_mommy==1.2.6
+coverage==4.3.4
+model_mommy==1.3.2
 django-debug-toolbar==1.5
 mock==2.0.0
-django-model-utils==2.5.2
-pip-tools==1.7.0
+django-model-utils==2.6.1
 
 pint==0.7.2
-fabric==1.12.0
+Fabric==1.13.1
