--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: python
 python:
   - "2.7"
+  - "3.4"
 install:
-  - pip install -r requirements.txt
-  - pip install coveralls
+  - pip install pipenv
+  - pipenv install --dev --ignore-pipfile
 script:
-  - coverage run ./manage.py test --settings=django_recipes.settings.test
+  - pipenv run coverage run ./manage.py test --settings=django_recipes.settings.test
 after_success:
-  - coveralls
+  - pipenv coveralls
