--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,11 @@ verify_ssl = true
 
 [dev-packages]
 
+mock = "==2.0.0"
+coverage = "==4.3.4"
+ipython = "==5.3.0"
+model_mommy = "==1.3.2"
+coveralls = "==1.2.0"
 
 
 [packages]
@@ -17,11 +22,7 @@ django-extensions = "==1.7.7"
 django-positions = "==0.5.4"
 mysqlclient = "==1.3.10"
 Pillow = "==4.0.0"
-ipython = "==5.3.0"
 django-autocomplete-light = "==3.2.1"
-coverage = "==4.3.4"
-model_mommy = "==1.3.2"
 django-debug-toolbar = "==1.5"
-mock = "==2.0.0"
 django-model-utils = "==2.6.1"
 Pint = "==0.7.2"
