--- a/Pipfile
+++ b/Pipfile
@@ -9,17 +9,16 @@ verify_ssl = true
 
 [packages]
 
-Django = "==1.11.14"
+Django = "*"
 django-tagging = "==0.4.5"
 django-extensions = "==1.7.7"
-django-positions = "==0.5.4"
+django-positions = "*"
 mysqlclient = "==1.3.10"
 Pillow = "==4.0.0"
 django-autocomplete-light = "==3.2.1"
-django-debug-toolbar = "==1.5"
+django-debug-toolbar = "*"
 django-model-utils = "==2.6.1"
 Pint = "==0.7.2"
-
 
 
 [dev-packages]
