--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ verify_ssl = true
 
 [packages]
 
-Django = "*"
+Django = "==2.0.7"
 django-tagging = "==0.4.5"
 django-extensions = "==1.7.7"
 django-positions = "*"
@@ -26,6 +26,6 @@ Pint = "==0.7.2"
 mock = "==2.0.0"
 coverage = "==4.3.4"
 ipython = "==5.3.0"
-model_mommy = "==1.3.2"
+model_mommy = "*"
 coveralls = "==1.2.0"
-
+Pylama = "*"
