--- a/Pipfile
+++ b/Pipfile
@@ -9,20 +9,17 @@ verify_ssl = true
 
 [packages]
 
-Django = "==2.0.7"
-django-tagging = "==0.4.5"
-django-extensions = "==1.7.7"
+Django = "*"
+Pillow = "*"
+django-extensions = "*"
 django-positions = "*"
-mysqlclient = "==1.3.10"
-Pillow = "==4.0.0"
-django-autocomplete-light = "==3.2.1"
-django-debug-toolbar = "*"
-django-model-utils = "==2.6.1"
+mysqlclient = "*"
+django-model-utils = "*"
 Pint = "==0.7.2"
-
 
 [dev-packages]
 
+django-debug-toolbar = "*"
 mock = "==2.0.0"
 coverage = "==4.3.4"
 ipython = "==5.3.0"
